// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesData with empty message 1`] = `
<div
  className="main-content"
>
  <div
    className="content-container"
  >
    <div
      className="component-container"
    >
      <div
        className="component"
      >
        <h2
          className="heading-secondary"
        >
          <FontAwesomeIcon
            border={false}
            className="fa-icon"
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  384,
                  512,
                  Array [],
                  "f6dd",
                  "M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm-96 144c0 4.42-3.58 8-8 8h-8c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h8c4.42 0 8 3.58 8 8v16c0 4.42-3.58 8-8 8h-8c-26.51 0-48-21.49-48-48v-32c0-26.51 21.49-48 48-48h8c4.42 0 8 3.58 8 8v16zm44.27 104H160c-4.42 0-8-3.58-8-8v-16c0-4.42 3.58-8 8-8h12.27c5.95 0 10.41-3.5 10.41-6.62 0-1.3-.75-2.66-2.12-3.84l-21.89-18.77c-8.47-7.22-13.33-17.48-13.33-28.14 0-21.3 19.02-38.62 42.41-38.62H200c4.42 0 8 3.58 8 8v16c0 4.42-3.58 8-8 8h-12.27c-5.95 0-10.41 3.5-10.41 6.62 0 1.3.75 2.66 2.12 3.84l21.89 18.77c8.47 7.22 13.33 17.48 13.33 28.14.01 21.29-19 38.62-42.39 38.62zM256 264v20.8c0 20.27 5.7 40.17 16 56.88 10.3-16.7 16-36.61 16-56.88V264c0-4.42 3.58-8 8-8h16c4.42 0 8 3.58 8 8v20.8c0 35.48-12.88 68.89-36.28 94.09-3.02 3.25-7.27 5.11-11.72 5.11s-8.7-1.86-11.72-5.11c-23.4-25.2-36.28-58.61-36.28-94.09V264c0-4.42 3.58-8 8-8h16c4.42 0 8 3.58 8 8zm121-159L279.1 7c-4.5-4.5-10.6-7-17-7H256v128h128v-6.1c0-6.3-2.5-12.4-7-16.9z",
                ],
                "iconName": "file-csv",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
           Download Data
        </h2>
        <div>
          <p
            className="component__message"
          >
            No Expenses to download.
             
            <Link
              className="router-link router-link--add"
              to="/create"
            >
              Add Expenses
            </Link>
             
            or change filters to show expenses.
          </p>
          <div
            className="component__content"
          >
            <FontAwesomeIcon
              border={false}
              className="component__illustration component__illustration--empty"
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f05e",
                    "M256 8C119.034 8 8 119.033 8 256s111.034 248 248 248 248-111.034 248-248S392.967 8 256 8zm130.108 117.892c65.448 65.448 70 165.481 20.677 235.637L150.47 105.216c70.204-49.356 170.226-44.735 235.638 20.676zM125.892 386.108c-65.448-65.448-70-165.481-20.677-235.637L361.53 406.784c-70.203 49.356-170.226 44.736-235.638-20.676z",
                  ],
                  "iconName": "ban",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              swapOpacity={false}
              symbol={false}
              title=""
              transform={null}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="content-container margin-top-md"
  >
    <div
      className="component-container"
    >
      <div
        className="component"
      >
        <h2
          className="heading-secondary"
        >
          <FontAwesomeIcon
            border={false}
            className="fa-icon"
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  576,
                  512,
                  Array [],
                  "f071",
                  "M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z",
                ],
                "iconName": "exclamation-triangle",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
           
          Delete Data
        </h2>
        <div>
          <p
            className="component__message"
          >
            No Expenses to delete.
             
            <Link
              className="router-link router-link--add"
              to="/create"
            >
              Add Expenses
            </Link>
             
            or change filters to show expenses.
          </p>
          <div
            className="component__content"
          >
            <FontAwesomeIcon
              border={false}
              className="component__illustration component__illustration--empty"
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f05e",
                    "M256 8C119.034 8 8 119.033 8 256s111.034 248 248 248 248-111.034 248-248S392.967 8 256 8zm130.108 117.892c65.448 65.448 70 165.481 20.677 235.637L150.47 105.216c70.204-49.356 170.226-44.735 235.638 20.676zM125.892 386.108c-65.448-65.448-70-165.481-20.677-235.637L361.53 406.784c-70.203 49.356-170.226 44.736-235.638-20.676z",
                  ],
                  "iconName": "ban",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              swapOpacity={false}
              symbol={false}
              title=""
              transform={null}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render ExpensesData with expenses 1`] = `
<div
  className="main-content"
>
  <div
    className="content-container"
  >
    <div
      className="component-container"
    >
      <div
        className="component"
      >
        <h2
          className="heading-secondary"
        >
          <FontAwesomeIcon
            border={false}
            className="fa-icon"
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  384,
                  512,
                  Array [],
                  "f6dd",
                  "M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm-96 144c0 4.42-3.58 8-8 8h-8c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h8c4.42 0 8 3.58 8 8v16c0 4.42-3.58 8-8 8h-8c-26.51 0-48-21.49-48-48v-32c0-26.51 21.49-48 48-48h8c4.42 0 8 3.58 8 8v16zm44.27 104H160c-4.42 0-8-3.58-8-8v-16c0-4.42 3.58-8 8-8h12.27c5.95 0 10.41-3.5 10.41-6.62 0-1.3-.75-2.66-2.12-3.84l-21.89-18.77c-8.47-7.22-13.33-17.48-13.33-28.14 0-21.3 19.02-38.62 42.41-38.62H200c4.42 0 8 3.58 8 8v16c0 4.42-3.58 8-8 8h-12.27c-5.95 0-10.41 3.5-10.41 6.62 0 1.3.75 2.66 2.12 3.84l21.89 18.77c8.47 7.22 13.33 17.48 13.33 28.14.01 21.29-19 38.62-42.39 38.62zM256 264v20.8c0 20.27 5.7 40.17 16 56.88 10.3-16.7 16-36.61 16-56.88V264c0-4.42 3.58-8 8-8h16c4.42 0 8 3.58 8 8v20.8c0 35.48-12.88 68.89-36.28 94.09-3.02 3.25-7.27 5.11-11.72 5.11s-8.7-1.86-11.72-5.11c-23.4-25.2-36.28-58.61-36.28-94.09V264c0-4.42 3.58-8 8-8h16c4.42 0 8 3.58 8 8zm121-159L279.1 7c-4.5-4.5-10.6-7-17-7H256v128h128v-6.1c0-6.3-2.5-12.4-7-16.9z",
                ],
                "iconName": "file-csv",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
           Download Data
        </h2>
        <div>
          <p
            className="component__message"
          >
            Click on the download icon to download your expenses in CSV format. Expenses downloaded are based on filters.
          </p>
          <div
            className="component__content"
          >
            <CSVLink
              asyncOnClick={false}
              data={
                Array [
                  Object {
                    "amount": 20,
                    "category": "Bills & Utilities",
                    "createdAt": "01/01/1970",
                    "description": "Data",
                    "id": 0,
                    "note": "",
                  },
                  Object {
                    "amount": 350,
                    "category": "Rent",
                    "createdAt": "27/12/1969",
                    "description": "Home Rentage",
                    "id": 1,
                    "note": "",
                  },
                  Object {
                    "amount": 80,
                    "category": "Maintenance",
                    "createdAt": "13/01/1970",
                    "description": "Room Repainting",
                    "id": 2,
                    "note": "",
                  },
                  Object {
                    "amount": 10,
                    "category": "Maintenance",
                    "createdAt": "11/01/1970",
                    "description": "Water Pipes Repair",
                    "id": 3,
                    "note": "",
                  },
                ]
              }
              filename="generatedBy_react-csv.csv"
              separator=","
              target="_blank"
              uFEFF={true}
            >
              <FontAwesomeIcon
                border={false}
                className="component__illustration"
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [],
                      "f358",
                      "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z",
                    ],
                    "iconName": "arrow-alt-circle-down",
                    "prefix": "far",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                swapOpacity={false}
                symbol={false}
                title=""
                transform={null}
              />
            </CSVLink>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="content-container margin-top-md"
  >
    <div
      className="component-container"
    >
      <div
        className="component"
      >
        <h2
          className="heading-secondary"
        >
          <FontAwesomeIcon
            border={false}
            className="fa-icon"
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  576,
                  512,
                  Array [],
                  "f071",
                  "M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z",
                ],
                "iconName": "exclamation-triangle",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
           
          Delete Data
        </h2>
        <div>
          <p
            className="component__message"
          >
            Note: This action is irreversible and will delete all Expensus's data relating to your account permanently.
          </p>
          <div
            className="component__content"
          >
            <CSVLink
              asyncOnClick={false}
              data={
                Array [
                  Object {
                    "amount": 20,
                    "category": "Bills & Utilities",
                    "createdAt": "01/01/1970",
                    "description": "Data",
                    "id": 0,
                    "note": "",
                  },
                  Object {
                    "amount": 350,
                    "category": "Rent",
                    "createdAt": "27/12/1969",
                    "description": "Home Rentage",
                    "id": 1,
                    "note": "",
                  },
                  Object {
                    "amount": 80,
                    "category": "Maintenance",
                    "createdAt": "13/01/1970",
                    "description": "Room Repainting",
                    "id": 2,
                    "note": "",
                  },
                  Object {
                    "amount": 10,
                    "category": "Maintenance",
                    "createdAt": "11/01/1970",
                    "description": "Water Pipes Repair",
                    "id": 3,
                    "note": "",
                  },
                ]
              }
              filename="generatedBy_react-csv.csv"
              separator=","
              target="_blank"
              uFEFF={true}
            >
              <FontAwesomeIcon
                border={false}
                className="component__illustration component__illustration--delete"
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      448,
                      512,
                      Array [],
                      "f2ed",
                      "M268 416h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12zM432 80h-82.41l-34-56.7A48 48 0 0 0 274.41 0H173.59a48 48 0 0 0-41.16 23.3L98.41 80H16A16 16 0 0 0 0 96v16a16 16 0 0 0 16 16h16v336a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128h16a16 16 0 0 0 16-16V96a16 16 0 0 0-16-16zM171.84 50.91A6 6 0 0 1 177 48h94a6 6 0 0 1 5.15 2.91L293.61 80H154.39zM368 464H80V128h288zm-212-48h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12z",
                    ],
                    "iconName": "trash-alt",
                    "prefix": "far",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                swapOpacity={false}
                symbol={false}
                title=""
                transform={null}
              />
            </CSVLink>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
